src/test/deca/etapeB/valid/not.deca
// Description:
//    Opérateur unaire
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2016

{
   boolean a = true;
   boolean b = !a;
}
