src/test/deca/etapeB/invalid/decl_init/init_float_in_bool.deca
// Description:
//    Déclaration de variables
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2016

{
   boolean a = 5.2;
}
